// Copyright (c) Microsoft Corporation.
// Licensed under the MIT License.

syntax = "proto3";

package durabletask.protos.backend.v1;

option csharp_namespace = "Microsoft.DurableTask.Protobuf";
option java_package = "com.microsoft.durabletask.implementation.protobuf";
option go_package = "github.com/microsoft/durabletask-protobuf/internal/protos";

import "orchestrator_service.proto";


import "google/protobuf/timestamp.proto";
import "google/protobuf/wrappers.proto";
import "google/protobuf/empty.proto";

// gRPC service used by Durable Task Framework (DTFx) backend implementations.
// The RPCs in this service are used by DTFx backends to manage orchestration state.
service BackendService {
    // Creates a new orchestration instance.
    rpc CreateInstance (CreateInstanceRequest) returns (CreateInstanceResponse);

    // Sends an event to an orchestration instance. This RPC is used for raising external events to orchestrations
    // and for sending orchestration lifecycle events, such as terminate, suspend, resume, etc.
    rpc AddEvent (AddEventRequest) returns (AddEventResponse);

    // Returns metadata about an orchestration instance.
    rpc GetInstance (GetInstanceRequest) returns (GetInstanceResponse);

    // Returns metadata about an entity instance.
    rpc GetEntity (GetEntityRequest) returns (GetEntityResponse);

    // Returns metadata about multiple orchestration instances using a query.
    rpc QueryInstances (QueryInstancesRequest) returns (QueryInstancesResponse);

    // Returns metadata for multiple entities using a query.
    rpc QueryEntities(QueryEntitiesRequest) returns (QueryEntitiesResponse);

    // Waits for an orchestration to reach a terminal state and then returns metadata for that orchestration.
    rpc WaitForInstance (WaitForInstanceRequest) returns (WaitForInstanceResponse);

    // Purges the state of one or more orchestration instances.
    rpc PurgeInstances (PurgeInstancesRequest) returns (PurgeInstancesResponse);

 	// Restarts an orchestration instance with the option to use a new instance ID.
    rpc RestartInstance (RestartInstanceRequest) returns (RestartInstanceResponse);

    // Cleans entity storage.
    rpc CleanEntityStorage(CleanEntityStorageRequest) returns (CleanEntityStorageResponse);

    // Starts a server stream for receiving work items
    rpc GetWorkItems (GetWorkItemsRequest) returns (stream WorkItem);

    // Gets orchestration runtime state (history, etc.) for a given orchestration instance.
    rpc GetOrchestrationRuntimeState (GetOrchestrationRuntimeStateRequest) returns (GetOrchestrationRuntimeStateResponse);

    // Gets the history of an orchestration instance as a stream of events.
    rpc StreamInstanceHistory(StreamInstanceHistoryRequest) returns (stream HistoryChunk);

    // Completes an outstanding activity work item and adds a new event to the target orchestration's inbox.
    rpc CompleteActivityWorkItem (CompleteActivityWorkItemRequest) returns (CompleteActivityWorkItemResponse);

    // Abandons an outstanding activity work item. Abandoned work items will be delivered again after some delay.
    rpc AbandonActivityWorkItem (AbandonActivityWorkItemRequest) returns (AbandonActivityWorkItemResponse);

    // Completes an outstanding orchestrator work item, and adds a new event to the target orchestration's inbox.
    rpc CompleteOrchestrationWorkItem (CompleteOrchestrationWorkItemRequest) returns (CompleteOrchestrationWorkItemResponse);

    // Abandons an outstanding orchestrator work item. Abandoned work items will be delivered again after some delay.
    rpc AbandonOrchestrationWorkItem (AbandonOrchestrationWorkItemRequest) returns (AbandonOrchestrationWorkItemResponse);

    // Completes an outstanding entity work item.
    rpc CompleteEntityWorkItem (CompleteEntityWorkItemRequest) returns (CompleteEntityWorkItemResponse);

    // Abandons an outstanding entity work item. Abandoned work items will be delivered again after some delay.
    rpc AbandonEntityWorkItem (AbandonEntityWorkItemRequest) returns (AbandonEntityWorkItemResponse);

    // Sends a health check ping to the backend service.
    rpc Ping (PingRequest) returns (PingResponse);

    // Returns the current metrics for the backend service.
    rpc GetMetrics (GetMetricsRequest) returns (GetMetricsResponse);

    // "Skip" graceful termination of orchestrations by immediately changing their status in storage to "terminated".
    // Note that a maximum of 500 orchestrations can be terminated at a time using this method.
    rpc SkipGracefulOrchestrationTerminations(SkipGracefulOrchestrationTerminationsRequest) returns (SkipGracefulOrchestrationTerminationsResponse);
}

// Request payload for adding new orchestration events.
message AddEventRequest {
    // The ID of the orchestration to send an event to.
    OrchestrationInstance instance = 1;
    // The event to send to the orchestration.
    HistoryEvent event = 2;
}

// Response payload for adding new orchestration events.
message AddEventResponse {
    // No fields
}

// Request payload for waiting for instance completion.
message WaitForInstanceRequest {
    string instanceId = 1;
    bool getInputsAndOutputs = 2;
}

// Response payload for waiting for instance completion.
message WaitForInstanceResponse {
    bool exists = 1;
    OrchestrationState orchestrationState = 2;
}

// Request parameters for fetching orchestration runtime state.
message GetOrchestrationRuntimeStateRequest {
    // The ID of the target orchestration instance.
    OrchestrationInstance instance = 1;
}

// Response payload returned when fetching orchestration runtime state.
message GetOrchestrationRuntimeStateResponse {
    // The existing history events for the target orchestration instance.
    repeated HistoryEvent history = 1;
}

// Request payload for completing an activity work item.
message CompleteActivityWorkItemRequest {
    // The completion token that was provided when the work item was fetched.
    string completionToken = 1;

    // The response event that will be sent to the orchestrator.
    // This must be either a TaskCompleted event or a TaskFailed event.
    HistoryEvent responseEvent = 2;
}

// Response payload for completing an activity work item.
message CompleteActivityWorkItemResponse {
    // No fields
}

// Request payload for abandoning an activity work item.
message AbandonActivityWorkItemRequest {
    // The completion token that was provided when the work item was fetched.
    string completionToken = 1;
}

// Response payload for abandoning an activity work item.
message AbandonActivityWorkItemResponse {
	// No fields
}

// Request payload for completing an orchestration work item.
message CompleteOrchestrationWorkItemRequest {
    // The completion token that was provided when the work item was fetched.
    string completionToken = 1;
    OrchestrationInstance instance = 2;
    OrchestrationStatus runtimeStatus = 3;
    google.protobuf.StringValue customStatus = 4;
    repeated HistoryEvent newHistory = 5;
    repeated HistoryEvent newTasks = 6;
    repeated HistoryEvent newTimers = 7;
    repeated OrchestratorMessage newMessages = 8;

    // The number of work item events that were processed by the orchestrator.
    // This field is optional. If not set, the service should assume that the orchestrator processed all events.
    google.protobuf.Int32Value numEventsProcessed = 9;

    OrchestrationTraceContext orchestrationTraceContext = 10;
}

// Response payload for completing an orchestration work item.
message CompleteOrchestrationWorkItemResponse {
	// No fields
}

// A message to be delivered to an orchestration by the backend.
message OrchestratorMessage {
    // The ID of the orchestration instance to receive the message.
    OrchestrationInstance instance = 1;
    // The event payload to be received by the target orchestration.
    HistoryEvent event = 2;
}

// Request payload for abandoning an orchestration work item.
message AbandonOrchestrationWorkItemRequest {
    // The completion token that was provided when the work item was fetched.
    string completionToken = 1;
}

// Response payload for abandoning an orchestration work item.
message AbandonOrchestrationWorkItemResponse {
	// No fields
}

// Request payload for completing an entity work item.
message CompleteEntityWorkItemRequest {
    // The completion token that was provided when the work item was fetched.
    string completionToken = 1;

    // The execution id of the scheduler.
    string executionId = 2;

    // The number of requests that were executed.
    // If this is smaller than the number of operations in the work item,
    // any left-over operations will be sent again with the next work item.
    int32 numberOperationsExecuted = 3;

    // The state of the entity after the executed operations, or null if none
    google.protobuf.StringValue entityState = 4;

    // The messages that were sent by the executed operations. This must
    // include any responses to the operation calls.
    repeated OrchestratorMessage messages = 5;
}

// Response payload for completing an entity work item.
message CompleteEntityWorkItemResponse {
    // No fields
}

// Request payload for abandoning an entity work item.
message AbandonEntityWorkItemRequest {
    // The completion token that was provided when the work item was fetched.
    string completionToken = 1;   
    string reason = 2;
}

// Response payload for abandoning an entity work item.
message AbandonEntityWorkItemResponse {
	// No fields
}

// Request payload for ping operations.
message PingRequest {
	// No fields
}

// Response payload for ping operations.
message PingResponse {
	// No fields
}

// Request payload for fetching backend metrics.
message GetMetricsRequest {
    // No fields
}

// Response payload for fetching backend metrics
message GetMetricsResponse {
    // The current metrics for the backend service.
    BackendMetrics metrics = 1;
}

// Metrics for the backend service.
message BackendMetrics {
    // Activity work item metrics
    WorkItemMetrics activityWorkItems = 1 [json_name="activityWorkItems"];
    // Orchestrator work item metrics
    WorkItemMetrics orchestratorWorkItems = 2 [json_name="orchestratorWorkItems"];
    // Entity work item metrics
    WorkItemMetrics entityWorkItems = 3 [json_name="entityWorkItems"];
    // Metrics related to workers currently connected to the backend
    ConnectedWorkerMetrics connectedWorkers = 4 [json_name="connectedWorkers"];
}

// Metrics related to work items
message WorkItemMetrics {
    // Number of work items that are queued and waiting to be processed
    int32 pending = 1 [json_name="pending"];
    // Number of work items that are currently being processed
    int32 active = 2 [json_name="active"];
    // Age of the oldest work item in the queue, in seconds
    int32 oldestAgeInSeconds = 3 [json_name="oldestAgeInSeconds"];
}

// Metrics related to workers currently connected to the backend
message ConnectedWorkerMetrics {
    // Number of worker instances that are currently connected to the backend
    int32 count = 1 [json_name="count"];
}
